# dailydozeofsomenews

./: Cargo.toml  README.md
src/: api.rs  main.rs  ref.txt  rnd.rs  ui.rs
src/lib/: api.rs  ers.rs  lib.rs  rd.rs
