[package]
name = "mynewsapp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
eframe = "0.19.0"
serde = {version = "1.0.147", features = ["derive"]}
serde_json = "1.0.87"
ureq = {version = "2.5.0", features = ["json"]}
url = "2.3.1"
