[package]
name = "mynewsapp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "lib"
path = "src/lib/lib.rs"


[dependencies]
dotenv = "0.15.0"
eframe = "0.19.0"
rand = "0.8.5"
reqwest = {version = "0.11.12", features = ["json"]}
serde = {version = "1.0.147", features = ["derive"]}
serde_json = "1.0.87"
thiserror = "1.0.37"
tokio = { version = "1.21.2", features = ["full"] }
ureq = {version = "2.5.0", features = ["json"]}
url = "2.3.1"